# funny_lidar_slam

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
app/: lidar_slam_app.cpp
cmake/: g2o.cmake
config/localization/: config_mid_360.yaml  config_nclt.yaml  config_nclt_icp.yaml  config_turing.yaml  config_turing_icp.yaml
config/mapping/: config_M2DGR.yaml  config_lio_sam.yaml  config_lio_sam_loam_full.yaml  config_livox_avia.yaml  config_mid_360.yaml  config_nclt.yaml  config_nclt_icp.yaml  config_nclt_loam_full.yaml  config_nclt_ndt.yaml  config_turing.yaml  config_turing_icp.yaml  config_turing_ndt.yaml
doc/: loam_formula.md
docker/: run.sh
include/3rd/: backward.hpp
include/3rd/livox_ros_driver/: CMakeLists.txt  package.xml
include/common/: compare_function.h  constant_variable.h  data_searcher.h  data_type.h  file_manager.h  frame.h  hash_function.h  keyframe.cpp  keyframe.h  loopclosure_result.h  math_function.h  motion_interpolator.h  pointcloud_utility.h  ros_utility.h  save_file.h  sensor_data_type.h  sensor_data_utility.h  timer.h
include/imu/: data_synchronizer.h  imu_data_searcher.h  imu_interpolator.h  pre_integration.h
include/ivox_map/: ivox_map.h  voxel_grid_node.h
include/lidar/: lidar_distortion_corrector.h  lidar_model.h  lidar_point_type.h  pointcloud_cluster.h
include/loam/: feature_extractor.h  pointcloud_projector.h
include/optimization/g2o/: accel_bias_prior_edge.h  accel_bias_rw_edge.h  g2o_optimizer_header.h  gyro_bias_prior_edge.h  gyro_bias_rw_edge.h  loopclosure_optimizer.h  position_edge.h  pre_integration_edge.h  prior_nav_state_edge.h  relative_pose_edge.h  rotation_edge.h  velocity_edge.h  vertex_type.h
include/registration/: icp_optimized.h  incremental_ndt.h  loam_full_kdtree.h  loam_point_to_plane_ivox.h  loam_point_to_plane_kdtree.h  registration_interface.h
include/slam/: config_parameters.h  frontend.h  localization.h  loop_closure.h  preprocessing.h  split_map.h  system.h
launch/: display.rviz  display_detailed_without_loopclosure.rviz  localization_mid_360.launch  localization_nclt.launch  localization_turing.launch  mapping_M2DGR.launch  mapping_lio_sam.launch  mapping_livox_avia.launch  mapping_mid360.launch  mapping_nclt.launch  mapping_turing.launch
scripts/: display_gps_imu_fusion_result.py
src/imu/: data_synchronizer.cpp  pre_integration.cpp
src/ivox_map/: ivox_map.cpp  voxel_grid_node.cpp
src/lidar/: lidar_distortion_corrector.cpp  lidar_model.cpp
src/loam/: feature_extractor.cpp  pointcloud_projector.cpp
src/optimization/g2o/: accel_bias_prior_edge.cpp  accel_bias_rw_edge.cpp  gyro_bias_prior_edge.cpp  gyro_bias_rw_edge.cpp  loopclosure_optimizer.cpp  position_edge.cpp  pre_integration_edge.cpp  prior_nav_state_edge.cpp  relative_pose_edge.cpp  rotation_edge.cpp  velocity_edge.cpp
src/slam/: config_parameters.cpp  frontend.cpp  localization.cpp  loop_closure.cpp  preprocessing.cpp  split_map.cpp  system.cpp
srv/: save_map.srv
test/: CMakeLists.txt  data_searcher_ut.cpp  imu_data_searcher_ut.cpp  lidar_distortion_corrector_ut.cpp  lidar_model_ut.cpp  loopclosure_optimization_ut.cpp  main_test.cpp  math_function_ut.cpp  motion_interpolator_ut.cpp  preintegration_optimization_ut.cpp  preintegration_ut.cpp
